ruth - fix some stuff

--- a/app/src/main/res/layout/fragment_admin_choose_order_for_delivery_tracker.xml
+++ b/app/src/main/res/layout/fragment_admin_choose_order_for_delivery_tracker.xml
@@ -12,9 +12,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:text="Create Delivery Tracker Location"
-        android:textSize="24sp"
+        android:text="Create And Update Delivery Tracker Location"
+        android:textAlignment="center"
         android:textColor="@color/black"
+        android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
@@ -46,9 +47,9 @@
         android:layout_width="383dp"
         android:layout_height="60dp"
         android:layout_marginTop="20dp"
-        android:textColor="@color/black"
-        android:text="Select the order to create the delivery tracker for customer to track their order location in maps"
+        android:text="Select the order to create or update the delivery tracker for customer to track their order location in maps"
         android:textAlignment="center"
+        android:textColor="@color/black"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="@+id/imageView11"
         app:layout_constraintHorizontal_bias="0.49"
