--- a/app/src/main/res/layout/fragment_change_profile_picture.xml
+++ b/app/src/main/res/layout/fragment_change_profile_picture.xml
@@ -32,12 +32,14 @@
 
     <Button
         android:id="@+id/btnSaveProfilePic"
-        android:layout_width="wrap_content"
+        android:layout_width="250dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="76dp"
+        android:backgroundTint="#FDC12A"
         android:text="@string/saveProfilePicture"
+        android:textColor="@color/black"
         app:layout_constraintEnd_toEndOf="@+id/outputProfilePicture"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="0.513"
         app:layout_constraintStart_toStartOf="@+id/outputProfilePicture"
         app:layout_constraintTop_toBottomOf="@+id/outputProfilePicture" />
 
