--- a/app/src/main/res/layout/fragment_customer_change_password.xml
+++ b/app/src/main/res/layout/fragment_customer_change_password.xml
@@ -12,7 +12,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="36dp"
-        android:text="Reset Password"
+        android:text="Change Password"
         android:textColor="@color/black"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
