--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -162,8 +162,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:backgroundTint="#FDC12A"
-            android:textColor="@color/black"
-            android:text="Reset Password" />
+            android:text="Change Password"
+            android:textColor="@color/black" />
 
 
     </LinearLayout>
