--- a/app/src/main/res/layout/delivery_service_rate.xml
+++ b/app/src/main/res/layout/delivery_service_rate.xml
@@ -8,7 +8,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="8dp"
+        android:layout_margin="10dp"
         android:orientation="vertical">
 
         <TextView
@@ -30,7 +30,7 @@
         <RatingBar
             android:id="@+id/ratingBarRateDelivery"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="38dp"
             android:layout_marginLeft="70dp"
             android:layout_marginTop="10dp"
             android:layout_marginRight="70dp"
