--- a/app/src/main/res/layout/fragment_admin_view_all_delivery_feedback.xml
+++ b/app/src/main/res/layout/fragment_admin_view_all_delivery_feedback.xml
@@ -11,25 +11,26 @@
         android:id="@+id/textView78"
         android:layout_width="402dp"
         android:layout_height="65dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="28dp"
         android:text="Delivery Service Feedback"
         android:textAlignment="center"
         android:textColor="@color/black"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.444"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerViewAllRateFeedback"
-        android:layout_width="426dp"
-        android:layout_height="635dp"
-        android:layout_marginStart="4dp"
+        android:layout_width="411dp"
+        android:layout_height="680dp"
+        android:layout_marginTop="30dp"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView78"
-        app:layout_constraintVertical_bias="1.0"
+        app:layout_constraintVertical_bias="0.257"
         tools:listitem="@layout/delivery_service_rate" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
