--- a/app/src/main/res/layout/fragment_delivery_status_credit_card.xml
+++ b/app/src/main/res/layout/fragment_delivery_status_credit_card.xml
@@ -117,12 +117,12 @@
 
         <TextView
             android:id="@+id/status"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="275dp"
+            android:layout_height="29dp"
             android:layout_marginTop="48dp"
             android:textColor="@color/black"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.607"
+            app:layout_constraintHorizontal_bias="0.461"
             app:layout_constraintStart_toEndOf="@+id/textView44"
             app:layout_constraintTop_toBottomOf="@+id/total" />
 
