ruth - fix some stuff

--- a/app/src/main/res/layout/fragment_choose_view.xml
+++ b/app/src/main/res/layout/fragment_choose_view.xml
@@ -49,6 +49,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
             android:text="View All Delivery Status"
+            android:textColor="#FDC12A"
             android:textSize="34sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.498"
