ruth - fix some stuff

--- a/app/src/main/res/layout/fragment_admin_return_product_decision.xml
+++ b/app/src/main/res/layout/fragment_admin_return_product_decision.xml
@@ -56,7 +56,7 @@
         android:id="@+id/btnAccept"
         android:layout_width="360dp"
         android:layout_height="50dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="4dp"
         android:backgroundTint="#42C333"
         android:text="Accept"
         app:layout_constraintEnd_toEndOf="parent"
@@ -68,7 +68,7 @@
         android:id="@+id/btnReject"
         android:layout_width="368dp"
         android:layout_height="51dp"
-        android:layout_marginTop="48dp"
+        android:layout_marginTop="4dp"
         android:backgroundTint="#FF0000"
         android:text="Reject"
         app:layout_constraintEnd_toEndOf="@+id/btnAccept"
@@ -81,8 +81,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="4dp"
         android:text="User ID"
+        android:visibility="invisible"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView75" />
 
@@ -91,6 +92,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
+        android:visibility="invisible"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.047"
         app:layout_constraintStart_toEndOf="@+id/UserId"
@@ -101,6 +103,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="12dp"
+        android:visibility="invisible"
         app:layout_constraintEnd_toEndOf="@+id/UserId"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/UserId"
