--- a/app/src/main/res/layout/fragment_cust_delivery_status.xml
+++ b/app/src/main/res/layout/fragment_cust_delivery_status.xml
@@ -122,9 +122,10 @@
             android:layout_width="217dp"
             android:layout_height="46dp"
             android:layout_marginTop="36dp"
+            android:textAlignment="center"
             android:textColor="@color/black"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.69"
+            app:layout_constraintHorizontal_bias="0.607"
             app:layout_constraintStart_toEndOf="@+id/labelCustDeliveryStatus"
             app:layout_constraintTop_toBottomOf="@+id/outputTotalAmount" />
 
